fix: card button spacings

--- a/apps/futuleap/components/social-button.module.scss
+++ b/apps/futuleap/components/social-button.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   gap: 10px;
   width: 100%;
-  max-width: 230px;
+  max-width: 200px;
   padding: 10px 7px;
   margin-bottom: 7px;
   border: 5px solid $primary-color;
